Fix boolean attribute (visibility) mapping render. Button align (#13)
* Align button icon

* Fix boolean attribute (visibility) mapping render

* Fix app bar icon alignment

* Align editor buttons

--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -2,6 +2,12 @@
 // Licensed under the MIT license.
 @use 'sass:math';
 
+.fui-Button__icon.data-field-button {
+  .el-svg-icon {
+    margin-top: 6px;
+  }
+}
+
 .el-svg-icon {
   vertical-align: top;
   width: 24px;
